bitbybit/tests/no_compile/overlapping_bitfield_bits.stderr
error: bitfield!: Detected overlap of field `bit` with other field
 --> tests/no_compile/overlapping_bitfield_bits.rs:4:1
  |
4 | / struct Test {
5 | |     #[bit(0, rw)]
6 | |     overlapping_bit: bool,
7 | |     #[bit(0, rw)]
8 | |     bit: bool
9 | | }
  | |_^

error[E0599]: no method named `build` found for struct `PartialTestNonExhaustiveOverlap<a, b>` in the current scope
  --> tests/no_compile/overlapping_bitfield_bits.rs:34:10
   |
11 |   #[bitfield(u32)]
   |   ---------------- method `build` not found for this struct
...
32 |       let _ = TestNonExhaustiveOverlap::builder()
   |  _____________-
33 | |         .with_a(0)
34 | |         .build();
   | |         -^^^^^ method not found in `PartialTestNonExhaustiveOverlap<true, false>`
   | |_________|
   |

error[E0599]: no method named `build` found for struct `PartialTestNonExhaustiveOverlap<a, b>` in the current scope
  --> tests/no_compile/overlapping_bitfield_bits.rs:37:10
   |
11 |   #[bitfield(u32)]
   |   ---------------- method `build` not found for this struct
...
35 |       let _ = TestNonExhaustiveOverlap::builder()
   |  _____________-
36 | |         .with_b(0)
37 | |         .build();
   | |         -^^^^^ method not found in `PartialTestNonExhaustiveOverlap<false, true>`
   | |_________|
   |

error[E0599]: no method named `with_b` found for struct `PartialTestNonExhaustiveOverlap<true, false>` in the current scope
  --> tests/no_compile/overlapping_bitfield_bits.rs:41:10
   |
11 |   #[bitfield(u32)]
   |   ---------------- method `with_b` not found for this struct
...
39 |       let _ = TestNonExhaustiveOverlap::builder()
   |  _____________-
40 | |         .with_a(0)
41 | |         .with_b(0)
   | |         -^^^^^^ method not found in `PartialTestNonExhaustiveOverlap<true, false>`
   | |_________|
   |
   |
   = note: the method was found for
           - `PartialTestNonExhaustiveOverlap<false, false>`
help: one of the expressions' fields has a method of the same name
   |
41 |         .value.with_b(0)
   |          ++++++

error[E0599]: no method named `with_b` found for struct `PartialTestExhaustiveOverlap<true, false>` in the current scope
  --> tests/no_compile/overlapping_bitfield_bits.rs:45:10
   |
20 |   #[bitfield(u16)]
   |   ---------------- method `with_b` not found for this struct
...
43 |       let _ = TestExhaustiveOverlap::builder()
   |  _____________-
44 | |         .with_a(0)
45 | |         .with_b(0)
   | |         -^^^^^^ method not found in `PartialTestExhaustiveOverlap<true, false>`
   | |_________|
   |
   |
   = note: the method was found for
           - `PartialTestExhaustiveOverlap<false, false>`
help: one of the expressions' fields has a method of the same name
   |
45 |         .value.with_b(0)
   |          ++++++

error[E0599]: no method named `build` found for struct `PartialTestExhaustiveOverlap<false, false>` in the current scope
  --> tests/no_compile/overlapping_bitfield_bits.rs:49:10
   |
20 |   #[bitfield(u16)]
   |   ---------------- method `build` not found for this struct
...
48 |       let _ = TestExhaustiveOverlap::builder()
   |  _____________-
49 | |         .build();
   | |         -^^^^^ method not found in `PartialTestExhaustiveOverlap<false, false>`
   | |_________|
   |
   |
   = note: the method was found for
           - `PartialTestExhaustiveOverlap<false, true>`
           - `PartialTestExhaustiveOverlap<true, false>`
